src/objects/EADD_Farmer_extra_info__c.object
<CustomObject>
    <description>Extra information from an EADD Farmer</description>
    <fields>
        <fullName>Access_AH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has access to Animal Health services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Access_farmer_trainings__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has access to farmer trainings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Access_financial_services__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does farmer have access to financial services/SACCO</description>
        <label>Do you Has access to financial services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Access_transport_services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has access to transport services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accesses_AI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has access to artificial insemination</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accesses_checkoff_services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has access to check-off services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accesses_farm_inputs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has access to farm inputs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accesses_feeds__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has access to feeds supplies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>District of the dairy farmer</description>
        <label>District</label>
        <referenceTo>District__c</referenceTo>
        <relationshipLabel>EADD Farmer extra info</relationshipLabel>
        <relationshipName>EADD_Farmer_extra_info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Farmer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Farmer object of the farmer giving these details</description>
        <label>Farmer</label>
        <referenceTo>Farmer__c</referenceTo>
        <relationshipLabel>EADD Farmer extra info</relationshipLabel>
        <relationshipName>EADD_Farmer_extra_info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>GPS location of the farmer</description>
        <label>Location</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>The name of the farmer</description>
        <label>Name</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subcounty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Subcounty of the dairy farmer</description>
        <label>Subcounty</label>
        <referenceTo>Subcounty__c</referenceTo>
        <relationshipLabel>EADD Farmer extra info</relationshipLabel>
        <relationshipName>EADD_Farmer_extra_info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Uses_AI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Uses artificial insemination</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Uses_dryseason_feeding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Uses dry season feeding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Uses_highquality_feeds__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Uses high quality feeds</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Uses_supplementary_feeding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Uses supplementary feeding</label>
        <type>Checkbox</type>
    </fields>
    <label>EADD Farmer extra info</label>
    <nameField>
        <label>EADD Farmer extra info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EADD Farmer extra info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>